MDEV-7631 : Invalid WSREP_SST rows appear in mysqld-bin.index file

Try not to release 0 (STDIN_FILENO) file descriptor as it can
incorrectly get reused by streams opened later.